--- a/AutoClick/Pages/Shared/_Footer.cshtml
+++ b/AutoClick/Pages/Shared/_Footer.cshtml
@@ -51,11 +51,11 @@
             <a href="https://www.facebook.com/profile.php?id=61578327757688" target="_blank" rel="noopener noreferrer" style="display: block;">
                 <img src="~/images/icons/FacebookIcon.svg" alt="Facebook" style="width: 32px; height: 32px; display: block;" />
             </a>
+            <a href="https://www.instagram.com/autoclick.cr/?fbclid=IwY2xjawOchvlleHRuA2FlbQIxMQBicmlkETExSlllc0lMY1hXY3YzYktWc3J0YwZhcHBfaWQBMAABHi5ViHVKqi-1hZE98D64CPwqFN_1dZ8oDA4_iM5nUTLVk-dd4JFfxWtn8d_m_aem_vgD5dUncfe_ZdkCBXhrAgQ" target="_blank" rel="noopener noreferrer" style="display: block;">
+                <img src="~/images/icons/InstagramIcon.svg" alt="Instagram" style="width: 32px; height: 32px; display: block;" />
+            </a>
             <a href="https://wa.me/50671052418" target="_blank" rel="noopener noreferrer" style="display: block;">
                 <img src="~/images/icons/WhatsappIcon.svg" alt="WhatsApp" style="width: 32px; height: 32px; display: block;" />
-            </a>
-            <a href="https://www.instagram.com/autoclick.cr/" target="_blank" rel="noopener noreferrer" style="display: block;">
-                <img src="~/images/icons/InstagramIcon.svg" alt="Instagram" style="width: 32px; height: 32px; display: block;" />
             </a>
         </div>
     </div>
