--- a/AutoClick/Pages/AnunciarMiAuto.cshtml
+++ b/AutoClick/Pages/AnunciarMiAuto.cshtml
@@ -640,8 +640,8 @@ valor fiscal</div>
 
                         <!-- Mensaje de privacidad -->
                         <div style="width: 280px; height: 60px; left: 700px; top: 160px; position: absolute; display: flex; align-items: flex-end; padding-bottom: 10px;">
-                            <div style="color: rgba(255, 255, 255, 0.6); font-size: 11px; font-family: Montserrat; font-weight: 400; font-style: italic; line-height: 1.3;">
-                                El valor fiscal no se mostrará públicamente
+                            <div style="color: rgba(255, 255, 255, 0.7); font-size: 13px; font-family: Montserrat; font-weight: 500; line-height: 1.3;">
+                                El valor fiscal <span style="font-weight: 700; color: #FF931E;">NO</span> se mostrará públicamente
                             </div>
                         </div>
 
