--- a/AutoClick/Pages/PpfCeramico.cshtml
+++ b/AutoClick/Pages/PpfCeramico.cshtml
@@ -14,6 +14,9 @@
         <img src="~/images/rainx/8b1ce10d81dd5b4fb704f27a6e127a7079ca5cc7.png" alt="Rain-X Products" class="rainx-hero-image rainx-hero-desktop" />
         <img src="~/images/rainx/Rainx1_responsive.png" alt="Rain-X Products" class="rainx-hero-image rainx-hero-tablet" />
         <img src="~/images/rainx/Rainx1_movil.png" alt="Rain-X Products" class="rainx-hero-image rainx-hero-mobile" />
+        <!-- Rainx2 images in same section to avoid gaps -->
+        <img src="~/images/rainx/Rainx2_tablet.png" alt="Rain-X Productos" class="rainx-hero-image rainx-hero-tablet-2" />
+        <img src="~/images/rainx/Rainx2_movil.png" alt="Rain-X Productos" class="rainx-hero-image rainx-hero-mobile-2" />
     </div>
 </section>
 
