--- a/AutoClick/Pages/HistorialPagos.cshtml
+++ b/AutoClick/Pages/HistorialPagos.cshtml
@@ -45,15 +45,15 @@
     <div class="payments-sidebar">
         <div class="sidebar-nav">
             <a href="/MiPerfil" class="nav-item">
-                <div class="personal-icon"></div>
-                <span>Información de contacto</span>
+                <div class="nav-icon personal-icon"></div>
+                <span>Información personal</span>
             </a>
             <a href="/HistorialPagos" class="nav-item active">
-                <div class="payments-icon"></div>
+                <div class="nav-icon payments-icon"></div>
                 <span>Historial de pagos</span>
             </a>
             <a href="/ConfiguracionCuenta" class="nav-item">
-                <div class="settings-icon"></div>
+                <div class="nav-icon settings-icon"></div>
                 <span>Configuración de cuenta</span>
             </a>
         </div>
